K8S/platforms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformserivce
  template:
    metadata:
      labels:
        app: platformserivce
    spec:
      containers:
      - name: platformserivce
        image: binarythistle/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  selector:
    app: platformserivce
  type: ClusterIP
  ports:
  - name: platformserivce
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: pltformgrpc
    port: 666
    targetPort: 666
    protocol: TCP
