K8S/platforms-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  selector:
    app: platformserivce
  type: NodePort
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
