K8S/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx # Selects the Ingress Controller
    nginx.ingress.kubernetes.io/use-regex: 'true' # Enables regex path matching
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/platforms"
        backend:
          service:
            name: platforms-clusterip-srv
            port:
              number: 80
      - pathType: Prefix
        path: /api/c/platforms
        backend:
          service:
            name: commands-clusterip-srv
            port:
              number: 80
